--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -44,17 +44,30 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <!--<TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Add Portion"
-                    android:textColor="@color/Red"
-                    android:textSize="18sp" />-->
                 <ImageView
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
                     android:src="@drawable/addicon" />
+
+                <com.smarteist.autoimageslider.SliderView
+                    android:id="@+id/imageSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:sliderAnimationDuration="600"
+                    app:sliderAutoCycleDirection="right"
+                    app:sliderAutoCycleEnabled="true"
+                    app:sliderIndicatorAnimationDuration="600"
+                    app:sliderIndicatorGravity="center_horizontal|bottom"
+                    app:sliderIndicatorMargin="15dp"
+                    app:sliderIndicatorOrientation="horizontal"
+                    app:sliderIndicatorPadding="3dp"
+                    app:sliderIndicatorRadius="2dp"
+                    app:sliderIndicatorSelectedColor="#5A5A5A"
+                    app:sliderIndicatorUnselectedColor="#FFF"
+                    app:sliderScrollTimeInSec="3"
+                    app:sliderStartAutoCycle="true" />
             </LinearLayout>
 
             <LinearLayout
@@ -217,11 +230,11 @@
 
                     <TextView
                         android:id="@+id/txtBeauty"
-                        android:autoSizeTextType="uniform"
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="13dp"
                         android:layout_weight="1"
+                        android:autoSizeTextType="uniform"
                         android:background="@drawable/red_button_round"
                         android:paddingHorizontal="6dp"
                         android:paddingVertical="2dp"
@@ -251,18 +264,17 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/popularVideoRec"
-                    android:layout_marginTop="10dp"
-                    tools:listitem="@layout/popularvideo_item"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"/>
-
+                    android:layout_height="100dp"
+                    android:layout_marginTop="10dp"
+                    tools:listitem="@layout/popularvideo_item" />
 
 
                 <HorizontalScrollView
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fillViewport="true">
+                    android:fillViewport="true"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
