--- a/app/src/main/res/layout/activity_downloan.xml
+++ b/app/src/main/res/layout/activity_downloan.xml
@@ -56,7 +56,20 @@
         android:layout_marginBottom="15dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abeezee"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="Downloaded Videos"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
