--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="lighRed">#fc928b</color>
     <color name="green">#5FB709</color>
     <color name="Red">#EB0D0D</color>
     <color name="blueish">#17A2C0</color>
