--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -126,7 +126,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/homeCategoryRec"
                     android:layout_width="match_parent"
-                    android:layout_height="170dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:padding="2dp"
                     tools:listitem="@layout/home_category_item"/>
