--- a/app/src/main/res/layout/activity_video_show.xml
+++ b/app/src/main/res/layout/activity_video_show.xml
@@ -228,6 +228,14 @@
                 app:sliderStartAutoCycle="true" />
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/categoryWatchedRec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="2dp"
+            tools:listitem="@layout/watch_video_list_item"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
