--- a/app/src/main/res/layout/activity_downloan.xml
+++ b/app/src/main/res/layout/activity_downloan.xml
@@ -69,6 +69,7 @@
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/downloadRec"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
