--- a/app/src/main/res/layout/offline_list_item.xml
+++ b/app/src/main/res/layout/offline_list_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/imgVid"
         android:layout_width="80dp"
         android:layout_height="70dp"
@@ -21,6 +22,7 @@
         android:textColor="@color/black"
         android:textSize="15dp" />
     <TextView
+        android:visibility="gone"
         android:id="@+id/videoUrlId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
