--- a/app/src/main/res/layout/activity_video_show.xml
+++ b/app/src/main/res/layout/activity_video_show.xml
@@ -43,6 +43,7 @@
                         android:textSize="20sp" />-->
 
                     <ImageView
+                        android:id="@+id/toolbarImgId"
                         android:layout_width="130dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
