--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -50,8 +50,7 @@
                     android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/addicon" />
+                    android:scaleType="fitXY" />
 
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/imageSlider"
