--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,4 +4,6 @@
         android:title="Terms and Conditions" />
     <item android:id="@+id/contact_item"
         android:title="Contact Us" />
+    <item android:id="@+id/download_item"
+        android:title="Downloads"/>
 </menu>
