--- a/app/src/main/res/layout/activity_video_show_offline.xml
+++ b/app/src/main/res/layout/activity_video_show_offline.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
@@ -32,21 +32,33 @@
                     app:contentInsetStart="0dp"
                     app:popupTheme="@style/Theme.Viewall.PopupOverlay">
 
-                    <!--<TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="View4All.tv"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        android:textColor="@color/Red"
-                        android:textSize="20sp" />-->
 
-                    <ImageView
-                        android:layout_width="130dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="3dp"
-                        android:src="@drawable/mainlogo" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        >
+
+                        <ImageView
+                            android:id="@+id/toolbarImgId"
+                            android:layout_width="130dp"
+                            android:layout_height="match_parent"
+                            android:layout_centerInParent="true"
+                            android:layout_marginStart="3dp"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginEnd="3dp"
+                            android:layout_marginBottom="3dp"
+                            android:src="@drawable/mainlogo" />
+
+                        <ImageView
+                            android:id="@+id/icn_hamburger"
+                            android:layout_width="55dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="5dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/hamburger" />
+
+                    </RelativeLayout>
 
                 </androidx.appcompat.widget.Toolbar>
 
@@ -129,6 +141,46 @@
                     android:textSize="15dp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="5"
+            android:gravity="center_vertical"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:src="@drawable/backicn" />
+
+            <TextView
+                android:id="@+id/txtBack"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/abeezee"
+                android:gravity="start"
+                android:text="BACK"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtChannelNameId"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:fontFamily="@font/abeezee"
+                android:gravity="center"
+                android:text="Downloads"
+                android:textColor="@color/Red"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
