--- a/app/src/main/res/layout/offline_list_item.xml
+++ b/app/src/main/res/layout/offline_list_item.xml
@@ -14,21 +14,23 @@
         android:scaleType="fitXY"
         android:src="@drawable/mainlogo" />
     <TextView
+        android:visibility="visible"
+        android:id="@+id/catNameTxtId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Cat name"
+        android:textColor="@color/Red"
+        android:textSize="18dp" />
+    <TextView
         android:id="@+id/videoNameId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="10dp"
         android:text="video Name Sample"
         android:textColor="@color/black"
         android:textSize="15dp" />
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/videoUrlId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="video Name Sample"
-        android:textColor="@color/black"
-        android:textSize="15dp" />
+
 
 </LinearLayout>
